--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
 h1 {
 	font-family: Calibri
 	font-size: 16px;
-	text-align: left;
+	text-align: center;
 	text-decoration-line: underline; 
 }
 h2 {
@@ -33,5 +33,9 @@ h3 {
 	font-style: italic;
 	font-weight: bold;
 	font-size: 12px;
-	text-align: center;
+	text-align: left;
+	left-margin: 25px;
+}
+.profile {
+	
 }
