--- a/style.css
+++ b/style.css
@@ -19,13 +19,13 @@
 h1 {
 	font-family: Calibri
 	font-size: 16px;
-	text-align: center;
+	text-align: left;
 	text-decoration-line: underline; 
 }
 h2 {
 	font-family: Calibri;
 	font-weight: bold;
-	font-size: 12px;
+	font-size: 14px;
 	text-align: left;
 }
 h3 {
@@ -34,8 +34,15 @@ h3 {
 	font-weight: bold;
 	font-size: 12px;
 	text-align: left;
-	left-margin: 25px;
+	margin: 50px;
 }
-.profile {
-	
+p {
+	font-family: Calibri;
+	font-weight: bold; 
+	text-align: left;
+}
+ul {
+	list-style-type: none;
+    margin: 75px;
+    padding: 0;
 }
