--- a/style.css
+++ b/style.css
@@ -3,8 +3,9 @@
 #header {
 	text-align: center;
 	font-family: Calibri;
-	font-size: 24px;
+	font-size: 26px;
 	font-weight: bold;
+	background-color: blue;
 }
 #address {
 	text-align: center; 
@@ -33,8 +34,8 @@ h3 {
 	font-style: italic;
 	font-weight: bold;
 	font-size: 12px;
-	text-align: left;
-	margin: 50px;
+	text-align: left; 
+	text-indent: 50px; 
 }
 p {
 	font-family: Calibri;
@@ -43,6 +44,6 @@ p {
 }
 ul {
 	list-style-type: none;
-    margin: 75px;
+    text-indent: 50px ;
     padding: 0;
 }
