add box modeling to other resume sections

--- a/style.css
+++ b/style.css
@@ -49,3 +49,23 @@ ul {
 	border-width: thick;
 	border-color: lightgrey ;
 }
+.experience {
+	border-style: solid;
+	border-width: thick;
+	border-color: lightgrey ;
+}
+.projects{
+	border-style: solid;
+	border-width: thick;
+	border-color: lightgrey ;
+}
+.extra-cirricular{
+	border-style: solid;
+	border-width: thick;
+	border-color: lightgrey ;
+}
+.interests {
+	border-style: solid;
+	border-width: thick;
+	border-color: lightgrey ;
+}
