Update stylesheets classes

--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ h3 {
 	text-align: left; 
 	text-indent: 50px; 
 }
-ul {
+ul, li {
 	margin-left: 40px;
 	padding-left: 0;
 	list-style-type: none;
@@ -47,17 +47,17 @@ ul {
 .education {
 	border-style: solid;
 	border-width: thick;
-	border-color: lightgrey ;
+	border-color: lightgrey;
 }
 .experience {
 	border-style: solid;
 	border-width: thick;
-	border-color: lightgrey ;
+	border-color: lightgrey;
 }
 .projects{
 	border-style: solid;
 	border-width: thick;
-	border-color: lightgrey ;
+	border-color: lightgrey;
 }
 .extra-cirricular{
 	border-style: solid;
