--- a/main.css
+++ b/main.css
@@ -1,17 +1,18 @@
 h1 {
 	text-align: center; 
 	font-weight: bold; 
-	color: lightskyblue;
+	color:lightskyblue;
 	font-size: 24px ;
 }
 div {
 	background-color: lightgrey; 
 	width: 250px;
-	border: 25px sandybrown;
+	border-width: 25px;
+	border-color: sandybrown;
 	padding: 25px;
 	margin: 25px;
 }
 p {
-	text-align: center;
+	text-align:center;
 	font-size: 16px;
 }
