--- a/main.css
+++ b/main.css
@@ -7,6 +7,7 @@ h1 {
 div {
 	background-color: lightgrey; 
 	width: 250px;
+	border-style: solid;
 	border-width: 25px;
 	border-color: sandybrown;
 	padding: 25px;
