--- a/main.css
+++ b/main.css
@@ -1,12 +1,12 @@
 h1 {
 	text-align: center; 
 	font-weight: bold; 
-	color:lightskyblue;
+	color: blue;
 	font-size: 24px ;
 }
 div {
 	background-color: lightgrey; 
-	width: 250px;
+	width: 500px;
 	border-style: solid;
 	border-width: 25px;
 	border-color: sandybrown;
