--- a/resume.css
+++ b/resume.css
@@ -19,7 +19,7 @@
 }
 h1 {
 	color: darkturquoise;
-	font-family: Calibri
+	font-family: Calibri;
 	font-size: 18px;
 	text-align: left;
 	text-decoration-line: underline; 
